[package]
name = "reno"
version = "0.1.0"
edition = "2021"
authors = ["Xiaoyang Liu <siujoeng.lau@gmail.com>"]
description = "Implementation of the Open Container Initiative Runtime Specification"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/reno"
homepage = "https://github.com/xiaoyang-sde/reno"
repository = "https://github.com/xiaoyang-sde/reno"

[profile.release]
lto = "thin"

[dependencies]
anyhow = "1.0.66"
caps = "0.5.5"
clap = { version = "4.0.26", features = ["derive"] }
nix = "0.25.0"
oci-spec = "0.5.8"
prctl = "1.0.0"
procfs = "0.14.1"
rlimit = "0.8.3"
serde = "1.0.147"
serde_json = "1.0.89"
