[package]
name = "reno"
version = "0.1.0"
edition = "2021"
authors = ["Xiaoyang Liu <siujoeng.lau@gmail.com>"]
description = "Experimental Linux container runtime that implements the OCI runtime specification"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/reno"
homepage = "https://github.com/xiaoyang-sde/reno"
repository = "https://github.com/xiaoyang-sde/reno"

[profile.release]
lto = "thin"

[dependencies]
anyhow = "1.0.86"
caps = "0.5.5"
clap = { version = "4.5.13", features = ["derive"] }
nix = { version = "0.29.0", features = ["fs", "hostname", "mount", "process", "resource", "sched", "signal", "user"] }
oci-spec = "0.6.8"
procfs = "0.16.0"
serde = "1.0.205"
serde_json = "1.0.122"
